app: Umfrage fertig gestellt

--- a/content/2_methode.tex
+++ b/content/2_methode.tex
@@ -34,7 +34,7 @@ Bei den soziodemografischen Daten wurden folgende Parameter erfasst: Geschlecht,
 \subsubsection{Medien und Mediennutzung}\label{sec:MedienMediennutzung}
 Die Fragebogenitems wurden basierend auf den Vorlagen der Erhebungsinstrumenten der Studien \citeA{Feierabend2017, Blikk2017, Waller2016, Suter2015, Feierabend2015, Kabali2015} neu erstellt. Dabei stand die Mediennutzungszeit während der Betreuung der Kinder, also die Dauer der Mediennutzung in Minuten und das dazu verwendeten Geräte und Medium im Fokus. Es erfolgte ein Spezifizierung des Frageitems hinsichtlich des betreuten Kindes, ob dieses wach war oder geschlafen hat und hinsichtlich des benutzen Mediums, ob dieses privat oder geschäftlich genutzt wurde. Die Erfassung der Mediennutzungszeit wurde anhand der letzten Betreuungstätigkeit vorgenommen, da davon ausgegangen wurde, dass sich die Befragten am ehesten an die absolute Zeit erinnern konnten. Eine Unterteilung in Tage unter der Woche oder am Wochenende wurde als wenig zielführend erachtet. Für die Beantwortung der Fragestellung hätte bereits die reine Mediennutzungszeit gereicht. Es wurde jedoch als hilfreich erachtet, zusätzliche Parameter zu der reinen Mediennutzungsdauer zu erheben, um gegebenenfalls die Fragestellung detaillierter beantworten zu können. Ein weiterer Grund für die zusätzlichen Fragebogenitems ist hinsichtlich der spärlichen Datenlage im Bereich Mediennutzung von Eltern mit Kleinkindern zu nennen. Erfasst wurden neben dem benutzen Medium und der aufgewendeten Zeit, die im Haushalt vorhanden Geräte und auf welches der benutzen Geräte während der Betreuung am wenigsten verzichtet werden konnte. 
 
-Die Operationalisiserung erfolgte anhand der Summenbildung der verwendeten Medien in Minuten, während denen das Kind betreut wurde (für eine Auflsitung der abgefragten Medien siehe Anhang \ref{app:Fragebogen} im Abschnitt \titleref{sec:app_mediennutzung} unter Mediennutzung). Diese Gesamtsumme der Mediennutzung $MNS_{Total}$ (\ref{eq:MedienTotal}) setzt sich aus den Teilsummen der genutzten  Medien zusammen, an denen das Kind wach war $MNS_{Wach}$ (\ref{eq:MedienWach}) oder geschlafen hat $MNS_{Geschlafen}$ (\ref{eq:MedienSchlafend}).  
+Die Operationalisiserung erfolgte anhand der Summenbildung der verwendeten Medien in Minuten, während denen das Kind betreut wurde (für eine Auflistung der abgefragten Medien siehe Anhang \ref{app:Fragebogen}). Diese Gesamtsumme der Mediennutzung $MNS_{Total}$ (\ref{eq:MedienTotal}) setzt sich aus den Teilsummen der genutzten  Medien zusammen, an denen das Kind wach war $MNS_{Wach}$ (\ref{eq:MedienWach}) oder geschlafen hat $MNS_{Geschlafen}$ (\ref{eq:MedienSchlafend}).  
 
 %Formel
 \begin{equation}\label{eq:MedienWach}
