--- a/content/4_diskussion.tex
+++ b/content/4_diskussion.tex
@@ -1,6 +1,7 @@
 \textit{TBD Discussed:}
 \begin{itemize}
     \item Bezüglich Aufteilung der Probanden in sicher vs unsicher: Dies entspricht in etwa den Werten der Metanalyse von \citeA{VanIJzendoorn1988}, die 65\% sicher und 35\% unsicher gebundene Probanden gefunden hatte.
+    \item Umfrage: Abfrage von MP3Player und Tageszeitungen -> eigentlich wollte ich Medien nach Geräten und nicht Medientätigkeit => Problem: Heute kann mit dem Smartphone all die Tätigkeiten erledigt werden (inkl. Radio hören und TV schauen). Was ich eigentlich wollte, wären Geräte wie Smartphone und Tablet, die eine Barriere zwischen Kind und Eltern aufbauen herauskristalliesieren.
 \end{itemize}
 
 
