--- a/content/Anhang/Umfragebogen.tex
+++ b/content/Anhang/Umfragebogen.tex
@@ -24,6 +24,7 @@ Bei Fragen und Rückmeldungen zur Studie können Sie sich per Mail an Till ERNST
 
 \bigskip
 \textbf{Demografische Daten}
+
 Zuerst folgen ein paar Angaben zu Ihrer Person und Ihrem Kind im Alter zwischen 0 und 1 Jahr. Falls Sie mehrere Kinder in diesem Alter betreuen, entscheiden Sie sich für dasjenige, das Sie am häufigsten betreuen. Gehen Sie in den folgenden Fragen immer vom gleichen Kind aus.
 
 \begin{longtable}[c]{ |p{1em}|p{16em}|p{16em}| }
@@ -61,7 +62,8 @@ Zuerst folgen ein paar Angaben zu Ihrer Person und Ihrem Kind im Alter zwischen 
 \end{longtable}
 
 \bigskip
-\textbf{Medien und Mediennutzung}\label{sec:app_mediennutzung}
+\textbf{Medien und Mediennutzung}
+
 Im Folgenden werden Sie gebeten, Angaben über verschiedene Medien-Tätigkeiten so exakt wie möglich zu machen, die Sie während der Betreuung von Ihrem Kind ausüben. Stellen Sie sich dabei die letzte Situation vor, in der Sie während mindestens zwei Stunden alleine mit Ihrem Kind waren.
 
 \vspace{2mm}
@@ -102,5 +104,382 @@ Welche der folgenden Geräte und Medien haben Sie während der letzten Betreuung
 \end{longtable}
 
 Welche Medientätigkeiten in Minuten haben Sie während der letzten Betreuung im Beisein Ihres Kindes genutzt? Bitte geben Sie die Zeit in Minuten an und unterscheiden Sie, ob das Kind geschlafen hat oder wach war.
+
+\begin{longtable}[c]{ |p{1em}|p{20em}|p{5em}|p{5em}|}
+
+  \hline
+  Nr. &  & Kind war wach & Kind hat geschlafen \\
+  \hline
+  \endfirsthead
+ 
+  \hline
+  \multicolumn{4}{|c|}{ Fortsetzung Medientätigkeit}\\
+  \hline
+   Nr. &  & Kind war wach & Kind hat geschlafen \\
+  \hline
+  \endhead
+ 
+  \hline
+  \endfoot
+ 
+  \hline\hline
+  \endlastfoot
+  
+  
+  20 & Telefonieren &  &  \\
+  21 & Textnachrichten lesen und schreiben (SMS, Whatsapp, etc.)  &  &  \\
+  22 & Emails lesen und bearbeiten &  &  \\
+  23 & Lesen / anschauen von Printmedien (Bilder-Büche &  &  \\
+  24 & Internet nutzen (surfen, Informationen suchen, etc.) &  &  \\
+  25 & Musik hören &  &  \\
+  26 & Fernsehen und Videos schauen (Sender, Netflix, DVD, etc.) &  &  \\
+  27 & Radio hören &  &  \\
+  28 & Fotos oder Videos machen &  &  \\
+  29 & Video-Games spielen (Handy, Computer, Konsole, etc.) &  &  \\
+  30 & Hörspiele oder Hörbücher hören &  &  \\
+\end{longtable}
+
+Wieviele der folgend aufgelisteten Geräte und Medien sind in Ihrem Haushalt vorhanden?
+
+\begin{longtable}[c]{ |p{1em}|p{18em}|p{10em}|}
+ 
+  \hline
+  Nr. & & Anzahl Geräte \\
+  \hline
+  \endfirsthead
+ 
+  \hline
+  \multicolumn{3}{|c|}{ Fortsetzung Anzahl Geräte}\\
+  \hline
+   Nr. &  & Anzahl Geräte \\
+  \hline
+  \endhead
+ 
+  \hline
+  \endfoot
+ 
+  \hline\hline
+  \endlastfoot
+  
+  
+  31 & Smartphone &  0, 1, 2, 3, mehr als 3 \\
+  32 & TV & ... \\
+  33 & Desktop und Laptop Computer & ... \\
+  34 & Tablet &  \\
+  35 & Radio / Stereoanlage / CD-Player &  \\
+  36 & Abo Tageszeitung / Zeitschrift &  \\
+  37 & Foto- Videocamera &  \\
+  38 & Spielkonsole &  \\
+  39 & MP3 Player &  \\
+\end{longtable}
+
+Auf welche drei Medium könnten Sie während der Betreuung nicht verzichten? Bitte wählen Sie maximal drei Medien aus.
+
+\begin{longtable}[c]{ |p{1em}|p{18em}|p{10em}|} 
+  \hline
+  Nr. & Medium & Auswahl (Max. 3) \\
+  \hline
+  \endfirsthead
+ 
+  \hline
+  \multicolumn{3}{|c|}{ Fortsetzung Medium}\\
+  \hline
+    Nr. & Medium & Auswahl \\
+  \hline
+  \endhead
+ 
+  \hline
+  \endfoot
+ 
+  \hline\hline
+  \endlastfoot
+  
+  
+  40 & Smartphone & \\
+  41 & TV &\\
+  42 & Desktop und Laptop Computer &\\
+  43 & Tablet &\\
+  44 & Radio / Stereoanlage / CD-Player &\\
+  45 & Abo Tageszeitung / Zeitschrift &\\
+  46 & Foto- Videocamera &\\
+  47 & Spielkonsole &\\
+  48 & MP3 layer &\\
+\end{longtable}
+
+\textbf{Bindungsstile}
+
+Die Fragen zu den Medien haben Sie erfolgreich beantwortet und sind etwa in der Hälfte des Fragebogens angelangt. Super! Das freut uns sehr. Denn mit Ihrer Hilfe tragen Sie zum Gelingen dieser Studie bei.
+
+\vspace{2mm}
+Im Folgenden finden Sie eine Reihe von Aussagen. Bitte lesen Sie jede durch und wählen Sie aus den fünf Antworten diejenige aus, die am besten zu Ihnen passt.
+
+\vspace{2mm}
+Kreuzen Sie bitte bei jeder Feststellung das Feld unter der von Ihnen gewählten Antwort an. Es gibt keine richtigen oder falschen Antworten. Überlegen Sie bitte nicht lange und lassen Sie keine Frage aus.
+
+\begin{longtable}[c]{ |p{1em}|p{14em}|p{3em}|p{3em}|p{3em}|p{3em}|p{3em}|} 
+  \hline
+  Nr. & & stimmt gar nicht & stimmt eher nicht & stimmt teils / teils & stimmt eher & stimmt genau \\
+  \hline
+  \endfirsthead
+ 
+  \hline
+  \multicolumn{7}{|c|}{ Fortsetzung Bindungsstile}\\
+  \hline
+  Nr. & & stimmt gar nicht & stimmt eher nicht & stimmt teils / teils & stimmt eher & stimmt genau \\
+  \hline
+  \endhead
+ 
+  \hline
+  \endfoot
+ 
+  \hline\hline
+  \endlastfoot
+  
+  49 & Ich weiß, wenn ich jemand brauche, wird auch jemand da sein. & & & & & \\
+  50 & Es macht mich nervös, wenn mir jemand zu nahe ist.& & & & & \\
+  51 & Ich mache mir oft Sorgen, dass meine Freunde/meine Freundinnen mich nicht wirklich mögen. & & & & & \\
+  52 &Ich bin mir nicht sicher, ob ich mich immer darauf verlassen kann, dass andere da sind, wenn ich sie brauche. & & & & & \\
+  53 & Mein Wunsch, in einem anderen Menschen völlig aufzugehen, schreckt andere manchmal ab.& & & & & \\
+  54 & Ich merke, dass andere mich nicht so nahe an sich herankommen lassen, wie ich es gerne hätte.& & & & & \\
+  55 & Für mich ist es schwierig, andere an mich heranzulassen.& & & & & \\
+  56 & Menschen sind nie da, wenn man sie braucht.& & & & & \\
+  57 & Ich mache mir oft Sorgen, ein wichtiger Mensch könnte mich verlassen.& & & & & \\
+  58 & Ich kann mich gut auf andere verlassen. & & & & & \\
+  59 & Es ist mir irgendwie unangenehm, mit anderen zu vertraut zu werden.& & & & & \\
+  60 & In Freundschaften wünschen sich meine Freunde/meine Freundinnen häufig mehr Nähe von mir, als mir angenehm ist.& & & & & \\
+  61 & Ich kann es mir nur schwer zugestehen, mich auf andere zu verlassen.& & & & & \\
+  62 & Ich mache mir oft Sorgen, dass meine Freunde/meine Freundinnen eines Tages nicht mehr mit mir befreundet sein möchten.& & & & & \\
+  63 & Es fällt mir schwer, anderen voll und ganz zu vertrauen.& & & & & \\
+  64 & Die Vorstellung, mir könnte jemand nahe kommen, beunruhigt mich. & & & & & \\
+  
+\end{longtable}
+
+\textbf{Stress}
+
+Jetzt interessiert uns, wie es Ihnen in letzter Zeit geht.
+
+\vspace{2mm}
+Im Folgenden finden Sie eine Reihe von Feststellungen. Bitte lesen Sie jede durch und wählen Sie aus den vier Antworten diejenige aus, die angibt, wie häufig die Feststellung auf Ihr Leben \underline{in den letzten 4 Wochen} zutrifft.
+
+\vspace{2mm}
+Kreuzen Sie bitte bei jeder Feststellung das Feld unter der von Ihnen gewählten Antwort an. Es gibt keine richtigen oder falschen Antworten. Überlegen Sie bitte nicht lange und lassen Sie keine Frage aus.
+
+\begin{longtable}[c]{ |p{1em}|p{14em}|p{4em}|p{4em}|p{4em}|p{4em}|} 
+  \hline
+  Nr. & & fast nie & manchmal & häufig & meistens \\
+  \hline
+  \endfirsthead
+ 
+  \hline
+  \multicolumn{6}{|c|}{ Fortsetzung Stress}\\
+  \hline
+  Nr. & & fast nie & manchmal & häufig & meistens \\
+  \hline
+  \endhead
+ 
+  \hline
+  \endfoot
+ 
+  \hline\hline
+  \endlastfoot
+  
+  65 & Sie fühlen sich ausgeruht. & & & & \\
+  66 & Sie haben das Gefühl, dass zu viele Forderungen an Sie gestellt werden. & & & & \\
+  67 & Sie haben viel zu tun. & & & & \\
+  68 & Sie haben das Gefühl, Dinge zu tun, die Sie wirklich mögen. & & & & \\
+  69 & Sie fürchten Ihre Ziele nicht erreichen zu können. & & & & \\
+  70 & Sie fühlen sich ruhig. & & & & \\
+  71 & Sie fühlen sich frustriert. & & & & \\
+  72 & Sie sind voller Energie. & & & & \\
+  73 & Sie fühlen sich angespannt. & & & & \\
+  74 & Ihre Probleme scheinen sich aufzutürmen. & & & & \\
+  75 & Sie fühlen sich gehetzt. & & & & \\
+  76 & Sie fühlen sich sicher und geschützt. & & & & \\
+  77 & Sie haben viele Sorgen. & & & & \\
+  78 & Sie haben Spass. & & & & \\
+  79 & Sie haben Angst vor der Zukunft. & & & & \\
+  80 & Sie sind leichten Herzens. & & & & \\
+  81 & Sie fühlen sich mental erschöpft. & & & & \\
+  82 & Sie haben Probleme, sich zu entspannen. & & & & \\
+  83 & Sie haben genug Zeit für sich. & & & & \\
+  84 & Sie fühlen sich unter Termindruck. & & & & \\
+\end{longtable}
+
+\textbf{Subjektives Wohlbefinden}
+
+Sie haben es bisher geschafft. Super!
+
+Damit tragen Sie sehr viel zu dieser Arbeit bei.
+
+\vspace{2mm}
+Zum Abschluss stellen wir Ihnen die wirklich letzten Fragen. Versprochen!
+
+\vspace{2mm}
+Wir wollen von Ihnen wissen, wie Sie sich im Allgemeinen fühlen.
+
+Wählen Sie die Stelle auf der Abstufung, wo Sie sich im Allgemeinen sehen. Versuchen Sie zügig vorzugehen ohne lange zu überlegen.
+
+\begin{longtable}[c]{ |p{1em} | p{4em} p{4em} p{4em} p{4em} p{4em} p{4em} p{4em}|} 
+  \hline
+  Nr. & \multicolumn{7}{|l|}{Frage} \\
+  \hline
+  \endfirsthead
+  
+  \hline
+  \endhead
+ 
+  \hline
+  \endfoot
+  
+  \hline
+  \endlastfoot
+  
+  85 & \multicolumn{7}{l|}{Im Allgemeinen betrachte ich mich als:}\\
+  & \multicolumn{3}{l}{Kein glücklicher Mensch} & \multicolumn{4}{r|}{Sehr glücklicher Mensch}\\
+  &$\square$&$\square$&$\square$&$\square$&$\square$&$\square$&$\square$\\
+  
+  86 & \multicolumn{7}{l|}{Im Vergleich zu meinen Bekannten betrachte ich mich als:}\\
+  & \multicolumn{3}{l}{Weniger glücklich} & \multicolumn{4}{r|}{Glücklicher}\\
+  &$\square$&$\square$&$\square$&$\square$&$\square$&$\square$&$\square$\\
+  
+  87 & \multicolumn{7}{l|}{\begin{minipage}{5.5in}Manche Leute sind im Allgemeinen sehr glücklich. Sie freuen sich am Leben, unabhängig davon, wie dieses verläuft, und sie machen aus allem das Beste. Wie sehr trifft diese Charakterisierung auf Sie zu?\end{minipage}}\\
+  & \multicolumn{3}{l}{Überhaupt nicht} & \multicolumn{4}{r|}{Zu einem sehr großen Teil}\\
+  &$\square$&$\square$&$\square$&$\square$&$\square$&$\square$&$\square$\\
+  
+  88 & \multicolumn{7}{l|}{\begin{minipage}{5.5in}Manche Leute sind nicht so glücklich. Obschon sie nicht depressiv sind, schauen sie nicht so glücklich aus, wie sie sein könnten. Wie sehr trifft diese Charakterisierung auf Sie zu?\end{minipage}}\\
+  & \multicolumn{3}{l}{Zu einem sehr großen Teil} & \multicolumn{4}{r|}{Überhaupt nicht}\\
+  &$\square$&$\square$&$\square$&$\square$&$\square$&$\square$&$\square$\\
+  
+\end{longtable}
+
+\textbf{Wettbewerb oder Punkte}
+
+Sie haben es endlich geschafft! War anstrengend, oder? Sie können sich nicht vorstellen wie dankbar wir sind, dass Sie bis hierher durchgehalten haben und sich die Zeit genommen haben!
+
+\vspace{2mm}
+Wir wissen dies zu schätzen und sagen schon mal vielen herzlichen Dank!
+
+\vspace{2mm}
+Nun können Sie sich entscheiden, ob Sie am Wettbewerb teilnehmen oder sich Versuchspersonenstunden anrechnen lassen wollen.
+
+\vspace{2mm}
+Wenn Sie am Wettbewerb teilnehmen möchten, benötigen wir dazu Ihre Personalien. Ihre persönlichen Daten werden nicht verwendet oder weitergegeben und nach der Gewinnziehung Mitte 2018 gelöscht.
+
+Die Gewinner werden schriftlich benachrichtigt. Über den Wettbewerb wird keine Korrespondenz geführt. Der Rechtsweg ist ausgeschlossen. Der Preis kann weder umgetauscht, noch in bar ausbezahlt werden.
+
+\vspace{2mm}
+Falls Sie uns noch etwas mitteilen wollen, so können Sie dies weiter unten machen.
+
+\begin{longtable}[c]{ |p{1em}|p{35em}|} 
+  \hline
+  Nr. & \multicolumn{1}{|l|}{Frage} \\
+  \hline
+  \endfirsthead
+ 
+  \hline
+  \multicolumn{2}{|c|}{ Fortsetzung Wettbewerb oder VPN}\\
+  \hline
+  Nr. & \multicolumn{1}{|l|}{Frage} \\
+  \hline
+  \endhead
+ 
+  \hline
+  \endfoot
+ 
+  \hline\hline
+  \endlastfoot
+  
+  89 & Möchten Sie am Wettbewerb teilnehmen oder sich Versuchspersonenstunden* anrechnen lassen? \\
+  & *Mit Versuchspersonenstunden weisen Sie nach, dass Sie an wissenschaftlichen Untersuchungen der ZHAW als Versuchsperson teilgenommen haben. Dies gilt nur für aktuell an der ZHAW studierende Personen. \\
+  & $\square$ Ich möchte am Wettbewerb teilnehmen.\\
+  
+  & $\square$ Ich möchte mir wichtige Versuchspersonenstunden anrechnen lassen.\\
+  
+  & $\square$ Ich möchte weder am Wettbewerb teilnehmen, noch mir Versuchspersonenstunden anrechnen lassen.\\
+  
+  90 & Liegt Ihnen noch etwas auf dem Herzen, das wir unbedingt wissen sollten? Bitte schreiben Sie uns doch Ihre Gedanken oder Anregungen.\\
+  & \textit{(Optional)}\\
+\end{longtable}
+
+\textit{Werden Versuchspersonenstunden angekreuzt, folgen weitere Fragen:}
+
+\begin{longtable}[c]{ |p{1em}|p{35em}|} 
+  \hline
+  Nr. & \multicolumn{1}{|l|}{Frage} \\
+  \hline
+  \endfirsthead
+ 
+  \hline
+  \multicolumn{2}{|c|}{ Fortsetzung Versuchspersonenstunden}\\
+  \hline
+  Nr. & \multicolumn{1}{|l|}{Frage} \\
+  \hline
+  \endhead
+ 
+  \hline
+  \endfoot
+ 
+  \hline\hline
+  \endlastfoot
+  
+  91 & Studieren Sie an der ZHAW?\\
+  &$\square$ Nein\\
+  &$\square$ Ja, am Departement A\\
+  &$\square$ Ja, am Departement G\\
+  &$\square$ Ja, am Departement L\\
+  &$\square$ Ja, am Departement N\\
+  &$\square$ Ja, am Departement P\\
+  &$\square$ Ja, am Departement S\\
+  &$\square$ Ja, am Departement T\\
+  &$\square$ Ja, am Departement W\\
+  &$\square$ Keine Angaben\\
+  
+  92 & Studieren Sie an der ZHAW Psychologie und möchten Sie sich 0.5 Vpn­Stunden anrechnen lassen?\\
+  &$\square$ Nein\\
+  &$\square$ Ja\\
+  &$\square$ Weiss nicht\\
+  
+  93 &Bitte geben Sie unten Ihre Angaben an:\\
+  & Vorname\\
+  & Nachname \\
+  & Ihre ZHAW-Mailadresse\\
+  
+  94 & Dies ist Ihr persönliches Vpn-Stunden-Blatt für diese Studie. Drucken Sie dieses Blatt aus und geben Sie es zusammen mit Ihrem "Formblatt für den Nachweis der Vpn-Stunden" im Sekretariat ab.\\
+  &\textit{Blatt mit Code für Vpn-Stunden vom Sekretariat P der ZHAW zum ausdrucken bereit gestellt.}\\
+  
+  95 & Wie seriös haben Sie die Umfrage ausgefüllt?\\
+  &$\square$ Seriös natürlich!\\
+  &$\square$ Ich wollte nur die Versuchspersonenstunden...\\
+\end{longtable}
+
+\textit{Hier geht es weiter wenn oben der Wettbewerb angekreuzt wurde:}
+
+Sie haben sich für den Wettbewerb entschieden. Bitte geben Sie im untenstehenden Feld Ihre Emailadresse an. Wir werden Ihre Emailadresse am Ende der Verlosung löschen. Viel Glück beim Wettbewerb und nochmals vielen herzlichen Dank für Ihre Teilnahme!
+
+\begin{longtable}[c]{ |p{1em}|p{35em}|} 
+  \hline
+  Nr. & \multicolumn{1}{|l|}{Frage} \\
+  \hline
+  \endfirsthead
+ 
+  \hline
+  \multicolumn{2}{|c|}{ Fortsetzung Versuchspersonenstunden}\\
+  \hline
+  Nr. & \multicolumn{1}{|l|}{Frage} \\
+  \hline
+  \endhead
+ 
+  \hline
+  \endfoot
+ 
+  \hline\hline
+  \endlastfoot
+  96 & Bitte geben Sie eine gültige Emailadresse an:\\
+  & \textit{Mailadresse}\\
+  
+  97 & Wie seriös haben Sie die Umfrage ausgefüllt?\\ 
+  &$\square$ Seriös natürlich!\\
+  &$\square$ Ich wollte die Umfrage nur einmal anschauen...\\
+\end{longtable}
 
 \end{flushleft}
