--- a/header.tex
+++ b/header.tex
@@ -11,13 +11,15 @@
 \usepackage[utf8x]{inputenc}
 \usepackage{amsmath}
 \usepackage{mathptmx} 
+\usepackage{amssymb}
 \usepackage{graphicx}
 \usepackage[colorinlistoftodos]{todonotes}
 \usepackage{pdfpages}
 \usepackage[]{ragged2e}
 \usepackage{glossaries}
-\usepackage{array}
+\usepackage{array,makecell}
 \usepackage{multirow}
+\usepackage{multicol}
 \usepackage{xcolor,colortbl}
 \usepackage{pgfplots} %balkendiagramme
 \pgfplotsset{compat=1.15}
