app: SWB Fragebogen übernommen

--- a/content/2_methode.tex
+++ b/content/2_methode.tex
@@ -107,7 +107,7 @@ Für die Reliabilitätsprüfung wurden sowohl die innere Konsistenz als auch die
 
 Der Perceived Stress Questionnaire \cite{Fliege2001} ist für alle Erwachsenen und für verschiedene Lebenssituationen geeignet. Die deutsche Stichprobe, auf die sich die Werte beziehen, wurde an Probanden zwischen 17 und 79 Jahren erhoben. Der Fragebogen kann gemäss \citeA{Naescher2009} zur Diagnostik des subjektiven Belastungserlebens bei Erwachsenen zweifellos empfohlen werden.
 
-Durch die Validierung und Übersetzung des originalen Fragebogens ins Deutsche, wurden die ursprünglich 30 Items, basierend auf der durchgeführten exploratorischen Faktorenanalyse, auf 20 reduziert. Dadurch entstand die in dieser Arbeit verwendete Kurzversion dieses Fragebogens. Das Verfahren ist im \enquote{Elektronischen Testarchiv} des ZPID enthalten kann für nichtkommerzielle Forschungs- und Unterrichtszwecke kostenlos eingesetzt werden \cite{ZPID}. Ebenso konnten die ursprünglich siebenfaktorielle Zuordnung der Items nicht beibehalten werden. Folgende vier Skalen blieben dabei übrig: (1) Sorgen, (2) Anspannung, (3) Freude und (4) Anforderungen. Diese Veränderungen sind nachvollziehbar und bei \citeA{Fliege2001} ausführlich dokumentiert. Die Einschätzung erfolgt über eine viertstufige Likertskale, die von 1 für \textit{fast nie}, über 2 für \textit{manchmal}, 3 für \textit{häufig} bis zu 4 für \textit{meistens} reicht. Bei den Items handelt es sich um Feststellungen, die von der Testperson beurteilt werden sollen (siehe dazu auch Anhang \ref{app:PSQ}. 
+Durch die Validierung und Übersetzung des originalen Fragebogens ins Deutsche, wurden die ursprünglich 30 Items, basierend auf der durchgeführten exploratorischen Faktorenanalyse, auf 20 reduziert. Dadurch entstand die in dieser Arbeit verwendete Kurzversion dieses Fragebogens. Das Verfahren ist im \enquote{Elektronischen Testarchiv} des ZPID enthalten kann für nichtkommerzielle Forschungs- und Unterrichtszwecke kostenlos eingesetzt werden \cite{ZPID}. Ebenso konnten die ursprünglich siebenfaktorielle Zuordnung der Items nicht beibehalten werden. Folgende vier Skalen blieben dabei übrig: (1) Sorgen, (2) Anspannung, (3) Freude und (4) Anforderungen. Diese Veränderungen sind nachvollziehbar und bei \citeA{Fliege2001} ausführlich dokumentiert. Die Einschätzung erfolgt über eine viertstufige Likertskale, die von 1 für \textit{fast nie}, über 2 für \textit{manchmal}, 3 für \textit{häufig} bis zu 4 für \textit{meistens} reicht. Bei den Items handelt es sich um Feststellungen, die von der Testperson beurteilt werden sollen (siehe dazu auch Anhang \ref{app:PSQ}). 
 
 Die Operationalisierung erfolgte anhand der Anleitung von \citeA{Naescher2009}. Dabei wurden die Indizes der vier Skalen Sorgen, Anspannung, Freude und Anforderungen mit Hilfe der Mittelwertsbildung erstellt (siehe \ref{eq:PSQIndexSorgen}, \ref{eq:PSQIndexAnspannung}, \ref{eq:PSQIndexFreude} und \ref{eq:PSQIndexAnforderung}). Dazu werden die jeweiligen Items der zugehörigen Skala aufaddiert und durch deren Anzahl dividiert. Hohe Werte in einer Skala bedeuten jeweils auch eine hohe Ausprägung der betreffenden Eigenschaft.
 
@@ -139,7 +139,9 @@ Für den Gesamtscore muss die Skala Freude umkodiert werden:
 In den Gesamtscore fliessen die oben berechneten Skalen ein und ergeben das allgemeine Stresserleben, respektive die aktuelle, subjektiv erlebte Belastung einer Person.
 
 \subsubsection{Subjektives Wohlbefinden: Subjective Happiness Scale (SHS)}\label{sec:SWB}
-Die Erfassung des subjektiven Wohlbefindens erfolgte anhand dem von \citeA{Lyubomirsky1999} entwickelten \textit{Subjective Happiness Scale (SHS)}, in der deutschen Übersetzung und Überprüfung von \citeA{Swami2009}. Der SHS wurde für die Erfassung  eines allgemeinen subjektiven Wohlbefindens mittels Selbtseinschätzungsfragebogen entwickelt. Ein Wohlbefinden, dass in seiner globalen und grundsätzlichen Ausprägung, also ob es sich um einen glücklichen oder unglücklichen Menschen handelt, erfasst wird  \cite[S.~139ff]{Lyubomirsky1999}. Die Skala enthält insgesamt vier Items. Zwei davon erfassen das eigene Selbstbild, basierend auf einer absoluten Einschätzung des eigenen Wohlbefindens und einer Einschätzung verglichen mit dem eigenen sozialen Umfeld. Bei den weiteren beiden Items wird die befragte Person angehalten, sich bezüglich einer individuellen Beschreibungen glücklicher und unglücklicher Menschen einzuschätzen. Das Antwortformat der vier Items basiert auf einer sieben Punkte Likertskala (z.B.: 1 für \textit{Kein glücklicher Mensch} bis 7 \textit{Sehr glücklicher Mensch}). 
+Die Erfassung des subjektiven Wohlbefindens erfolgte anhand dem von \citeA{Lyubomirsky1999} entwickelten \textit{Subjective Happiness Scale (SHS)}, in der deutschen Übersetzung und Überprüfung von \citeA{Swami2009}. Der SHS wurde für die Erfassung  eines allgemeinen subjektiven Wohlbefindens mittels Selbtseinschätzungsfragebogen entwickelt. Ein Wohlbefinden, dass in seiner globalen und grundsätzlichen Ausprägung, also ob es sich um einen glücklichen oder unglücklichen Menschen handelt, erfasst wird  \cite[S.~139ff]{Lyubomirsky1999}.
+
+Die Skala enthält insgesamt vier Items. Zwei davon erfassen das eigene Selbstbild, basierend auf einer absoluten Einschätzung des eigenen Wohlbefindens und einer Einschätzung verglichen mit dem eigenen sozialen Umfeld. Bei den weiteren beiden Items wird die befragte Person angehalten, sich bezüglich einer individuellen Beschreibungen glücklicher und unglücklicher Menschen einzuschätzen (siehe dazu auch Anhang \ref{app:SHS}). Das Antwortformat der vier Items basiert auf einer sieben Punkte Likertskala (z.B.: 1 für \textit{Kein glücklicher Mensch} bis 7 \textit{Sehr glücklicher Mensch}). 
 
 \citeA{Lyubomirsky1999} weisen darauf hin, dass der SHS sich für die Erfassung des subjektiven Wohlbefindens besser eignet als andere vergleichbare Instrumente (z.B.: \textit{Affect Balance Scale} oder \textit{the Satisfaction With Life Scale}), da der Fragebogen eine globale subjektive Einschätzung bezügliche Wohlbefinden vornimmt, im Gegensatz zur Erfassung von eigentlichen Glückszuständen, die einer bestimmte Zeitspanne zuzuordnen sind (z.B.: affektive und kognitive Zustände). Der Fragebogen wurde in 14 Studien mit einem Total von 2,732 Teilnehmern validiert. Die Daten wurden innerhalb der vereinigten Staaten anhand von Studenten zweier Universitäten und einer Mittelschule, von Erwachsenen innerhalb zweier Städten in Kalifornien   erhoben. Zudem wurden Teilnehmer aus Moswkau, Russland beigezogen. Demzufolge soll der SHS eine hohe interne Konsistenz aufweisen, welche über alle Stichproben stabil blieben. Die Test-Retest-Korrelation und die Korrelation zwischen Eigen- und Fremdeinschätzung deuten auf eine gute bis sehr gute Realiabilität hin.  
 Zudem deute die Konstruktvalidität darauf hin, dass der Fragebogen auch wirklich das Konstrukt subjektives Wohlbefinden misst (vgl. ebd.). \citeA{Swami2009} konnten in ihrer Studie nachweisen, dass es sich bei der deutschen Übersetzung um eine unidimensionale Struktur, mit einer hohen internen Konsistenz handelt. Das Cronbach $\alpha$ für die deutsche Version belief sich auf .82. Diese Übersetzung korrelierte hoch mit anderen Messinstrumenten, welche das subjektive Wohlbefinden erfassen. Demzufolge habe der neue Fragebogen eine gute Konvergenzvalidität. Hingegen konnten die Forscher keine Aussage über die Test-Retest-Reliabilität machen, noch nahmen sie eine Validierungsprüfung vor, da dies nicht zum Gegenstand ihrer Überprüfung zählte (vgl. ebd.).
