--- a/content/Anhang/AAS.tex
+++ b/content/Anhang/AAS.tex
@@ -5,7 +5,7 @@ Die im Folgenden dargestellte Adult Attachment Sacale (AAS) wurde aus der Validi
 \begin{table}[htbp]
 \begin{tabular}{|l | m{30em} | p{2em}|} 
   \hline
-  \multicolumn{3}{|c|}{\textbf{Adult Attachment Scale}}\\
+  \multicolumn{3}{|c|}{\textbf{Adult Attachment Scale**}}\\
   \hline
   Nr. & Text & Orig. \\ 
   \hline\hline
@@ -36,6 +36,7 @@ Die im Folgenden dargestellte Adult Attachment Sacale (AAS) wurde aus der Validi
   14 & Ich mache mir oft Sorgen, dass meine Freunde/meine Freundinnen eines Tages nicht mehr mit mir befreundet sein möchten. & 16 \\
   \hline
   \multicolumn{3}{l}{* Die Items wurden für die Erstellung des Skalenwertes umcodiert.}\\
+  \multicolumn{3}{l}{** Deutsche Übersetzung gemäss \citeA{Schmidt2004}}.\\
   \multicolumn{3}{l}{}\\
 \end{tabular}
 \caption{Items der Adult Attachment Scale}
