--- a/content/Anhang/PSQ.tex
+++ b/content/Anhang/PSQ.tex
@@ -2,7 +2,7 @@
 \begin{table}[htbp]
 \begin{tabular}{|p{2em} | m{30em} | l|} 
   \hline
-  \multicolumn{3}{|c|}{\textbf{Perceived Stress Questionnaire}}\\
+  \multicolumn{3}{|c|}{\textbf{Perceived Stress Questionnaire**}}\\
   \hline
   Nr. & Text & Orig. \\ 
   \hline\hline
@@ -41,6 +41,7 @@
   \hline
   \multicolumn{3}{l}{* Bei diesen Items muss der Wert des Items von 5 abgezogen werden,}\\
   \multicolumn{3}{l}{~~~bevor das Ergebnis mit den Werten der anderen Items in die Berechnung eingeht.}\\
+  \multicolumn{3}{l}{** Deutsche Übersetzung gemäss \citeA{Fliege2001}}.\\
   \multicolumn{3}{l}{}\\
 \end{tabular}
 \caption{Items des Perceived Stress Questionnaire}
