--- a/main.tex
+++ b/main.tex
@@ -140,6 +140,7 @@ Bindungsstil, Stress und Wohlbefinden - Faktoren des Medienverhaltens von Eltern
 
 % SHS Fragebogen
 \section{Subjective Happiness Scale (SHS)}\label{app:SHS}
+\input{content/Anhang/SHS.tex}
 \newpage
 
 % Fragebogen
